[package]
name = "spotified"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "2.3.2", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
zvariant = "3.4.1"
clap = { version = "3.2.12", features = ["derive"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
